--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "npx react-native start"
+    "start": "react-native start"
   },
   "dependencies": {
+    "@react-native/metro-config": "^0.72.11",
     "react": "^18.2.0",
     "react-native": "^0.72.4"
   },
   "main": "index.js",
-  "devDependencies": {},
   "author": "",
   "license": "ISC",
   "description": ""
