--- a/package.json
+++ b/package.json
@@ -1,14 +1,26 @@
 {
-  "name": "rnintegration",
+  "name": "mix",
   "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "react-native start"
   },
   "dependencies": {
-    "@react-native/metro-config": "^0.72.11",
     "react": "^18.2.0",
     "react-native": "^0.72.4"
+  },
+  "devDependencies": {
+    "@react-native/metro-config": "^0.72.11",
+    "@babel/core": "^7.20.0",
+    "@babel/preset-env": "^7.20.0",
+    "@babel/runtime": "^7.20.0",
+    "metro-react-native-babel-preset": "0.76.8",
+    "@tsconfig/react-native": "^3.0.2",
+    "@types/jest": "^29.5.5",
+    "@types/react": "~18.0.14",
+    "@types/react-test-renderer": "^18.0.2",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "typescript": "^4.9.5"
   },
   "main": "index.js",
   "author": "",
