--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -16,6 +16,8 @@ android {
         versionCode 1
         versionName "1.0"
 
+        ndkVersion = "25.1.8937393"
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
