--- a/package.json
+++ b/package.json
@@ -3,27 +3,22 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "react-native start"
+    "start": "react-native start",
+    "postinstall": "patch-package"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "^2.5.1",
     "@react-navigation/drawer": "^6.6.4",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/stack": "^6.3.18",
     "@reduxjs/toolkit": "^1.9.6",
     "dotenv": "^16.3.1",
-    "fast-text-encoding": "^1.0.6",
     "joi": "^17.10.2",
-    "mixpanel-react-native": "^2.3.1",
     "react": "^18.2.0",
     "react-native": "^0.72.4",
     "react-native-device-info": "^10.11.0",
-    "react-native-gesture-handler": "^2.13.1",
-    "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
-    "react-native-webview": "^13.6.0",
     "react-redux": "^8.1.2",
     "rn-secure-storage": "^2.0.8"
   },
@@ -38,6 +33,7 @@
     "@types/react-test-renderer": "^18.0.2",
     "babel-plugin-module-resolver": "^5.0.0",
     "metro-react-native-babel-preset": "0.76.8",
+    "patch-package": "^7.0.0",
     "typescript": "^4.9.5"
   },
   "main": "index.js",
