--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@reduxjs/toolkit": "^1.9.6",
     "dotenv": "^16.3.1",
     "joi": "^17.10.2",
+    "mixpanel-react-native": "^2.3.1",
     "react": "^18.2.0",
     "react-native": "^0.72.4",
     "react-native-device-info": "^10.11.0",
+    "react-native-gesture-handler": "^2.13.1",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
+    "react-native-webview": "^13.6.0",
     "react-redux": "^8.1.2",
     "rn-secure-storage": "^2.0.8"
   },
