--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "^2.5.1",
     "@react-navigation/drawer": "^6.6.4",
     "@react-navigation/native": "^6.1.8",
